--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@angular/platform-server": "5.0.3",
+    "@angular/router": "^5.2.0",
     "@ionic-native/action-sheet": "4.3.2",
     "@ionic-native/admob-free": "^4.11.0",
     "@ionic-native/camera": "4.3.2",
@@ -44,6 +45,7 @@
     "@ionic/storage": "2.1.3",
     "@ngx-translate/core": "9.1.1",
     "@ngx-translate/http-loader": "2.0.1",
+    "@okta/okta-angular": "^1.0.4",
     "angular2-dynamic-component": "0.1.2",
     "cordova-ios": "4.5.5",
     "cordova-plugin-actionsheet": "^2.3.3",
